--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "mongodb": "^6.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
